# zerec

./: Cargo.toml  LICENSE-MIT  README.md  ROADMAP.md
zerec/: Cargo.toml
zerec-derive/: Cargo.toml
zerec-derive/src/: attr.rs  decode.rs  encode.rs  lib.rs
zerec/src/: adapter.rs  codec.rs  decoder.rs  encoder.rs  error.rs  lib.rs  zero_copy.rs
zerec/src/impls/: mod.rs  option.rs  primitives.rs  sequences.rs  string.rs
zerec/src/integrations/: glam.rs
zerec/tests/: codec.rs  derive.rs
