[package]
name = "zerec"
description = "Minimal zero-copy binary codec for Rust."
readme = "../README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
derive = ["dep:zerec-derive"]
glam = ["dep:glam"]

[dependencies]
zerec-derive = { path = "../zerec-derive", version = "0.3.0", optional = true }
glam = { version = "0.33", default-features = false, optional = true }

[[test]]
name = "codec"
path = "tests/codec.rs"

[[test]]
name = "derive"
path = "tests/derive.rs"
required-features = ["derive"]